--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -230,6 +230,12 @@ table {
 
 .progress {
     height: 5px;
+    margin: 0 1.5rem 0.25rem 1.5rem;
+
+    @media (max-width: 768px) {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 a {
